<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <!-- Khu vực hiển thị logo -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6">

        <ImageView
            android:id="@+id/iv_uit_logo"
            android:layout_width="@dimen/image_base"
            android:layout_height="@dimen/image_base"
            android:layout_gravity="center"
            android:scaleType="fitCenter"
            android:src="@drawable/logo"/>
    </FrameLayout>

    <!-- Tiêu đề From XML / From CODE -->
    <LinearLayout
        android:layout_marginTop="@dimen/margin_basex2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/from_xml"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginRight="@dimen/margin_base"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/from_code"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginRight="@dimen/margin_base"/>
    </LinearLayout>

    <!-- Khu vực chứa button animation -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- FADE IN -->
            <LinearLayout
                android:layout_marginTop="@dimen/margin_base"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_fade_in_xml"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/fade_in"/>

                <Button
                    android:id="@+id/btn_fade_in_code"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/fade_in"/>
            </LinearLayout>

            <!-- FADE OUT -->
            <LinearLayout
                android:layout_marginTop="@dimen/margin_base"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_fade_out_xml"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/fade_out"/>

                <Button
                    android:id="@+id/btn_fade_out_code"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/fade_out"/>
            </LinearLayout>

            <!-- BLINK -->
            <LinearLayout
                android:layout_marginTop="@dimen/margin_base"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_blink_xml"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/blink"/>

                <Button
                    android:id="@+id/btn_blink_code"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/blink"/>
            </LinearLayout>

            <!-- ZOOM IN -->
            <LinearLayout
                android:layout_marginTop="@dimen/margin_base"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_zoom_in_xml"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/zoom_in"/>

                <Button
                    android:id="@+id/btn_zoom_in_code"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/zoom_in"/>
            </LinearLayout>

            <!-- ZOOM OUT -->
            <LinearLayout
                android:layout_marginTop="@dimen/margin_base"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_zoom_out_xml"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/zoom_out"/>

                <Button
                    android:id="@+id/btn_zoom_out_code"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/zoom_out"/>
            </LinearLayout>

            <!-- ROTATE -->
            <LinearLayout
                android:layout_marginTop="@dimen/margin_base"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_rotate_xml"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/rotate"/>

                <Button
                    android:id="@+id/btn_rotate_code"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/rotate"/>
            </LinearLayout>

            <!-- MOVE -->
            <LinearLayout
                android:layout_marginTop="@dimen/margin_base"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_move_xml"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/move"/>

                <Button
                    android:id="@+id/btn_move_code"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/move"/>
            </LinearLayout>

            <!-- SLIDE UP -->
            <LinearLayout
                android:layout_marginTop="@dimen/margin_base"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_slide_up_xml"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/slide_up"/>

                <Button
                    android:id="@+id/btn_slide_up_code"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/slide_up"/>
            </LinearLayout>

            <!-- BOUNCE -->
            <LinearLayout
                android:layout_marginTop="@dimen/margin_base"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_bounce_xml"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/bounce"/>

                <Button
                    android:id="@+id/btn_bounce_code"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/bounce"/>
            </LinearLayout>

            <!-- COMBINE -->
            <LinearLayout
                android:layout_marginTop="@dimen/margin_base"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_combine_xml"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/combine"/>

                <Button
                    android:id="@+id/btn_combine_code"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/combine"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
    schemas.android.com